--- a/04 ■► React/final-app/src/components/Header/index.module.css
+++ b/04 ■► React/final-app/src/components/Header/index.module.css
@@ -1,3 +1,57 @@
+.header_mobile_button {
+  display: none;
+  z-index: 999;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100px;
+  height: 100px;
+  border: 1px solid var(--borders-color);
+  color: var(--text-color);
+  background-color: var(--buttons-color);
+  border-radius: 3px;
+  font-size: 40px;
+  font-weight: 600;
+  transition: var(--quick-fx);
+  cursor: pointer;
+  opacity: 0.5;
+}
+.header_mobile_button:hover {
+  background-color: var(--buttons-hover-color);
+  opacity: 1;
+}
+.header_mobile_button:active {
+  transition: var(--instant-fx);
+  background-color: var(--buttons-active-color);
+}
+
+.header_mobile_dropdown_btn {
+  display: none;
+  z-index: 999;
+  position: fixed;
+  top: 110px;
+  left: 0px;
+  width: 100px;
+  height: 100px;
+  border: 1px solid var(--borders-color);
+  color: var(--text-color);
+  background-color: var(--buttons-color);
+  border-radius: 3px;
+  font-size: 40px;
+  font-weight: 600;
+  transition: var(--quick-fx);
+  cursor: pointer;
+  opacity: 0.5;
+}
+.header_mobile_dropdown_btn:hover {
+  background-color: var(--buttons-hover-color);
+  opacity: 1;
+}
+.header_mobile_dropdown_btn:active {
+  transition: var(--instant-fx);
+  background-color: var(--buttons-active-color);
+}
+
 .header {
   z-index: 10;
   width: 100%;
@@ -378,119 +432,72 @@
   color: rgb(255, 0, 0);
 }
 
-@media only screen and (max-width: var(--extra-small-device)) {
+@media only screen and (max-width: 575px) {
+  .header_mobile_button {
+    display: none;
+  }
+  .header_mobile_dropdown_btn {
+    display: none;
+  }
   .header {
-    z-index: 10;
-    width: 100%;
-    height: auto;
-    background-color: var(--header-bg-color);
-    -webkit-backdrop-filter: blur(5px);
-            backdrop-filter: blur(5px);
-    border: none;
+    width: 575px;
   }
   .header__list {
-    z-index: 2;
-    position: relative;
-    width: 100%;
-    height: 40px;
-    background-color: transparent;
-    border: none;
-    border-bottom: 1px solid var(--borders-color);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 60px;
-    background-color: var(--header-top-color);
-    box-sizing: content-box;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 575px;
+    height: 100vh;
+    flex-direction: column;
+    display: none;
   }
   .header__list_buttons {
-    box-sizing: content-box;
-    height: 100%;
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-    color: var(--text-negative-color);
-    font-size: 14px;
-    font-weight: 600;
-    text-transform: capitalize;
-    transition: var(--quick-fx);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 5px;
+    width: 475px;
+    height: 25%;
+    margin-left: 100px;
+    font-size: 24px;
+    border-left: 1px solid var(--text-negative-color);
   }
-  .header__list_buttons #fa_caret {
-    color: var(--text-negative-color);
-    margin: 0px 0px 0px 5px;
-    scale: 0.8;
-    rotate: 180deg;
-    transition: var(--quick-fx);
+  .header__list_buttons:not(:first-of-type) {
+    border-top: 1px solid var(--text-negative-color);
   }
-  .header__list_buttons:hover {
-    scale: 1.01;
-    color: var(--link-hover-color);
-    border-bottom: 1px solid var(--link-hover-color);
-    filter: drop-shadow(0 0 3px var());
-  }
-  .header__list_buttons:hover #fa_caret {
-    rotate: 0deg;
-    color: var(--link-hover-color);
-  }
-  .header__list_buttons:active {
-    transition: var(--instant-fx);
-    color: var(--link-active-color);
-    border-bottom: 1px solid var(--link-active-color);
-    filter: drop-shadow(0 0 8px var());
-  }
-  .header__list_buttons:active #fa_caret {
-    rotate: 0deg;
-    color: var(--link-active-color);
+  .header__list_buttons #fa_caret-right {
+    opacity: 0.1;
   }
   .header__list_productsdropdown {
     z-index: 3;
     position: absolute;
-    top: 100%;
-    left: 30%;
-    width: auto;
-    height: auto;
-    display: flex;
+    top: 0px;
+    left: 0px;
+    width: 575px;
+    height: 100vh;
+    display: none;
     visibility: hidden;
     opacity: 0;
     transform: translate(0, -100%);
     transition: ease-in-out 0.2s;
     justify-content: center;
     align-items: flex-start;
-    padding: 20px 60px 20px 20px;
+    padding: 40px 20px 40px 20px;
     gap: 80px;
-    border: 1px solid var(--borders-color);
-    background-color: var(--default-bg-color);
+    background-color: var(--header-top-color);
     filter: drop-shadow(0 0 2px var(--filter-shadow-color));
   }
   .header__list_productsdropdown__columns {
     display: flex;
     flex-direction: column;
-    width: 33%;
+    width: 20%;
   }
   .header__list_productsdropdown__columns_header {
-    color: var(--text-color);
-    font-size: 18px;
-    font-weight: 900;
-    margin-left: 30px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    margin-bottom: 15px;
+    color: var(--text-negative-color);
+    font-size: 28px;
+    margin-bottom: 25px;
   }
   .header__list_productsdropdown__columns_items {
-    color: var(--link-color);
-    font-weight: 600;
-    cursor: pointer;
-    margin-left: 30px;
-    transition: var(--quick-fx);
-    width: -moz-fit-content;
-    width: fit-content;
+    color: var(--text-negative-color);
   }
   .header__list_productsdropdown__columns_items:not(:last-of-type) {
-    margin-bottom: 5px;
+    margin-bottom: 10px;
   }
   .header__list_productsdropdown__columns_items:hover {
     color: var(--link-hover-color);
@@ -499,46 +506,21 @@
     transition: var(--instant-fx);
     color: var(--link-active-color);
   }
-  .header__list_productsdropdown__columns_discount {
-    color: var(--link-color);
-    font-size: 18px;
-    font-weight: 900;
-    cursor: pointer;
-    margin-left: 30px;
-    text-transform: uppercase;
-    transition: var(--quick-fx);
-    width: -moz-fit-content;
-    width: fit-content;
-  }
-  .header__list_productsdropdown__columns_discount:hover {
-    color: var(--link-hover-color);
-  }
-  .header__list_productsdropdown__columns_discount:active {
-    transition: var(--instant-fx);
-    color: var(--link-active-color);
-  }
   .header__main {
-    width: 100%;
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0 20px;
-    font-size: 14px;
-    font-weight: 600;
-    background: var(--header-bg-color);
-    border: none;
-    border-bottom: 1px solid var(--borders-color);
-    padding: 0 5%;
+    position: relative;
   }
   .header__main_logo {
-    border: none;
-    width: 60px;
-    height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 0px;
+    transform: translate(-50%, -50%);
+    width: 100px;
+    height: auto;
     overflow: hidden;
     display: flex;
     align-items: center;
-    scale: 1.5;
+    scale: 1;
+    margin-left: 50px;
     margin-right: 10px;
   }
   .header__main_logo__content {
@@ -550,42 +532,18 @@
     filter: invert(0);
   }
   .header__main_langbar {
-    height: 100%;
-    width: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .header__main_langbar #fa_globe {
+    position: absolute;
+    top: 5px;
+    left: 110px;
     width: auto;
-    height: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 2px;
-    margin-right: 5px;
-    color: var(--text-color);
-  }
-  .header__main_langbar__selector {
-    width: auto;
-    height: 30px;
-    padding: 2px;
-    background-color: transparent;
-    outline: none;
-    border: none;
-    font-weight: 600;
-    color: var(--text-color);
-  }
-  .header__main_langbar__selector_options {
-    font-weight: 600;
-    background-color: var(--default-bg-color);
-  }
-  .header__main_langbar__selector_options:checked {
-    color: var(--default-color);
+    height: auto;
+    margin: 0px;
   }
   .header__main_search {
-    height: 100%;
-    width: 500px;
+    margin-left: 55px;
+    margin-top: 40px;
+    height: auto;
+    width: 450px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -603,7 +561,7 @@
     font-weight: 600;
   }
   .header__main_search__button {
-    width: 50px;
+    width: 40px;
     height: 30px;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
@@ -633,47 +591,13 @@
     color: var(--link-active-color);
   }
   .header__main_switch {
-    height: 100%;
-    width: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0px 75px;
-  }
-  .header__main_switch__slider {
-    position: relative;
-    width: 40px;
-    height: 20px;
-    border: 1px solid var(--borders-color);
-    border-radius: 10.5px;
-    box-sizing: content-box;
-    margin: 0 10px;
-    background-color: var(--link-hover-color);
-  }
-  .header__main_switch__slider_button {
     position: absolute;
-    top: 0%;
-    left: 0%;
-    transform: translateX(0%);
-    width: 20px;
-    height: 20px;
-    border: 1px solid var(--borders-color);
-    border-radius: 50%;
-    background-color: var(--default-color);
-    scale: 1.05;
-    transition: var(--slow-fx);
-  }
-  .header__main_switch #fa_sun {
-    transition: var(--slow-fx);
-    scale: 1.8;
-    opacity: 0.9;
-    color: var(--link-color);
-  }
-  .header__main_switch #fa_moon {
-    transition: var(--slow-fx);
-    scale: 1;
-    opacity: 0.5;
-    color: var(--link-color);
+    top: 9px;
+    left: 300px;
+    width: auto;
+    height: auto;
+    margin: 0px;
+    scale: 0.75;
   }
   .header__main_userpanel {
     height: 100%;
@@ -758,4 +682,7 @@
     font-weight: 600;
     color: rgb(255, 0, 0);
   }
+}
+.hidden {
+  display: none;
 }/*# sourceMappingURL=index.module.css.map */
