--- a/04 ■► React/final-app/src/components/Breadcrumb/index.module.css
+++ b/04 ■► React/final-app/src/components/Breadcrumb/index.module.css
@@ -9,6 +9,11 @@
   border: none;
   border-bottom: 1px solid var(--borders-color);
 }
+@media only screen and (max-width: 1199px) {
+  .breadcrumb {
+    display: none;
+  }
+}
 .breadcrumb__contents {
   letter-spacing: 1px;
   width: 1300px;
