--- a/04 ■► React/final-app/src/components/Breadcrumb/index.module.scss
+++ b/04 ■► React/final-app/src/components/Breadcrumb/index.module.scss
@@ -8,6 +8,9 @@
     justify-content: center;
     border: none;
     border-bottom: 1px solid var(--borders-color);
+    @media only screen and (max-width: 1199px) {
+        display: none;
+    };
     &__contents {
         letter-spacing: 1px;
         width: 1300px;
